adjust the delete method of availability, create a new route for the post method of availability, adjust the availability class, update the swagger doc and also write a script that populate the database with neat data
